Update server, add generic recepient, rename sensors to channels

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <h2>Sensors</h2>
-    <div id="sensors"><i>Not connected</i></div>
+    <h2>Channels</h2>
+    <div id="channels"><i>Not connected</i></div>
 </body>
 
 </html>
